# dergOs

./: Cargo.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: interrupts.rs  kio.rs  kpanic.rs  logging.rs  main.rs  serial.rs  stacktrace.rs
kernel/src/fb/: color.rs  mod.rs
kernel/src/mem/: kalloc.rs  mod.rs
kernel/src/mem/kfalloc/: list.rs  lla.rs  mod.rs
kernel/src/mem2/: list.rs  mod.rs
kernel/src/res/: 3caulk.data  logo.data  logo2.data  panic.data
src/: main.rs
